add creator to players
